test 2 automatic updates

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Hello, OpenShift builds by testerken met webhook.</h1>
+<h1>Hello, OpenShift builds by testerken met webhook test 2 voor
+automatische updates dingeeee.</h1>
 </body>
 </html>
