--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Hello, OpenShift builds by testerken met webhook test 2 voor
-automatische updates om ne keer te proberen.</h1>
+automatische updates om nog ne keer te proberen.</h1>
 </body>
 </html>
