--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Hello, OpenShift builds by testerken met webhook test 2 voor
-auto updates.</h1>
+auto updates om eens de webhook te testen.</h1>
 </body>
 </html>
