--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,6 @@
   <title>Welcome to OpenShift testerken</title>
 </head>
 <body>
-<h1>Hello, OpenShift builds by testerken met webhook test 2 voor
-auto updates om eens de webhook te testen.</h1>
+<h1>Hello, OpenShift builds by testerken: Automatic builds.</h1>
 </body>
 </html>
