--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift testerken</title>
 </head>
 <body>
-<h1>Hello, OpenShift builds by testerken: Automatic builds test 2.</h1>
+<h1>Hello, OpenShift builds by testerken: Automatic builds met test 35468974.</h1>
 </body>
 </html>
